further data processing added

--- a/Data Understanding Seattle AirBnB.ipynb
+++ b/Data Understanding Seattle AirBnB.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'smart_location', 'host_verifications', 'availability_60', 'amenities', 'bed_type', 'scrape_id', 'availability_30', 'experiences_offered', 'city', 'name', 'require_guest_phone_verification', 'room_type', 'availability_365', 'country', 'neighbourhood_group_cleansed', 'is_location_exact', 'calendar_last_scraped', 'host_id', 'picture_url', 'last_scraped', 'cancellation_policy', 'longitude', 'has_availability', 'state', 'host_url', 'description', 'instant_bookable', 'market', 'listing_url', 'availability_90', 'accommodates', 'country_code', 'street', 'neighbourhood_cleansed', 'price', 'number_of_reviews', 'latitude', 'requires_license', 'minimum_nights', 'guests_included', 'maximum_nights', 'require_guest_profile_picture', 'calendar_updated', 'jurisdiction_names', 'extra_people', 'id', 'calculated_host_listings_count'}\n"
+      "{'instant_bookable', 'extra_people', 'availability_30', 'availability_365', 'availability_90', 'price', 'id', 'neighbourhood_group_cleansed', 'cancellation_policy', 'require_guest_phone_verification', 'room_type', 'calculated_host_listings_count', 'jurisdiction_names', 'last_scraped', 'street', 'host_url', 'amenities', 'minimum_nights', 'host_id', 'is_location_exact', 'listing_url', 'calendar_last_scraped', 'city', 'bed_type', 'longitude', 'latitude', 'country_code', 'country', 'guests_included', 'state', 'has_availability', 'require_guest_profile_picture', 'smart_location', 'host_verifications', 'accommodates', 'number_of_reviews', 'picture_url', 'market', 'neighbourhood_cleansed', 'experiences_offered', 'calendar_updated', 'scrape_id', 'requires_license', 'name', 'description', 'maximum_nights', 'availability_60'}\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "4      within an hour               100%                  NaN"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "4  $450.00          NaN           NaN          $700.00      $125.00"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
        "4  450.0           0.0            0.0             700.0         125.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'amenities',\n",
+       " 'bed_type',\n",
+       " 'calendar_last_scraped',\n",
+       " 'calendar_updated',\n",
+       " 'cancellation_policy',\n",
+       " 'city',\n",
+       " 'country',\n",
+       " 'country_code',\n",
+       " 'description',\n",
+       " 'experiences_offered',\n",
+       " 'extra_people',\n",
+       " 'first_review',\n",
+       " 'has_availability',\n",
+       " 'host_about',\n",
+       " 'host_has_profile_pic',\n",
+       " 'host_identity_verified',\n",
+       " 'host_is_superhost',\n",
+       " 'host_location',\n",
+       " 'host_name',\n",
+       " 'host_neighbourhood',\n",
+       " 'host_picture_url',\n",
+       " 'host_response_time',\n",
+       " 'host_since',\n",
+       " 'host_thumbnail_url',\n",
+       " 'host_url',\n",
+       " 'host_verifications',\n",
+       " 'instant_bookable',\n",
+       " 'is_location_exact',\n",
+       " 'jurisdiction_names',\n",
+       " 'last_review',\n",
+       " 'last_scraped',\n",
+       " 'listing_url',\n",
+       " 'market',\n",
+       " 'medium_url',\n",
+       " 'name',\n",
+       " 'neighborhood_overview',\n",
+       " 'neighbourhood',\n",
+       " 'neighbourhood_cleansed',\n",
+       " 'neighbourhood_group_cleansed',\n",
+       " 'notes',\n",
+       " 'picture_url',\n",
+       " 'property_type',\n",
+       " 'require_guest_phone_verification',\n",
+       " 'require_guest_profile_picture',\n",
+       " 'requires_license',\n",
+       " 'room_type',\n",
+       " 'smart_location',\n",
+       " 'space',\n",
+       " 'state',\n",
+       " 'street',\n",
+       " 'summary',\n",
+       " 'thumbnail_url',\n",
+       " 'transit',\n",
+       " 'xl_picture_url',\n",
+       " 'zipcode'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(cat_listing_df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +523,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
