some wordings changed

--- a/Seattle AirBnB Bookings Analysis .ipynb
+++ b/Seattle AirBnB Bookings Analysis .ipynb
@@ -594,7 +594,6 @@
    ],
    "source": [
     "# Let's look into percentage of booked properties by month\n",
-    "# we can simply do it by dividing total \n",
     "\n",
     "capacity = calendar_df[calendar_df['year'] == 2016][['listing_id','month']].groupby(['month']).count()\n",
     "capacity = capacity.reset_index()\n",
@@ -640,7 +639,7 @@
     }
    ],
    "source": [
-    "# Let's focus on neighbourhood_cleansed as this is neigbourhood column shows the most detailed description, \n",
+    "# Let's take a first look at neighbourhood_cleansed as this is neigbourhood column shows the most detailed description, \n",
     "# it also does not have any missing values.\n",
     "\n",
     "avg_neighbourhood_price = listing_df[['neighbourhood_cleansed','price']].groupby('neighbourhood_cleansed').mean().reset_index()\n",
@@ -692,7 +691,7 @@
    "source": [
     "As we could see the most expensive neighbourhood groups are Magnolia, Queen Anne, Downtown and West Seattle.\n",
     "\n",
-    "For further analysis we will primarily focus on neighbourhood groups rather individual neighbourhoods as this provides less noise for our model."
+    "For price prediction we will primarily focus on neighbourhood groups rather individual neighbourhoods as these provides less noise for our model."
    ]
   },
   {
@@ -784,7 +783,7 @@
     "As we've seen in the __Data understanding__ step: \n",
     "\n",
     "- Some of the attributes from Seattle dataset have missing data\n",
-    "    - Luckily for us only a small proportion of those attributes we are going to use in the model have around 10% of missing values. The rest of data is complete.\n",
+    "    - Luckily for us only a small proportion of those attributes is are going to be used in the model have around 10% of missing values. The rest of the data is complete.\n",
     "- We've identified highly correlated attributes from the same categories\n",
     "    - Those attributes will be excluded from the training model\n",
     "    \n",
@@ -817,7 +816,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cleaning categorical variables. \n",
+    "# Dropping categorical variables. \n",
     "\n",
     "listing_df = listing_df.drop(columns = ['amenities', 'calendar_updated', 'cancellation_policy', 'city',\n",
     "                                        'space', 'neighborhood_overview', 'notes', 'medium_url',\n",
@@ -838,7 +837,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cleaning nuemrical variables. \n",
+    "# Dropping nuemrical variables. \n",
     "\n",
     "listing_df = listing_df.drop(columns = ['last_scraped', 'host_response_rate', 'accommodates', 'bedrooms',\n",
     "                                        'host_listings_count', 'host_total_listings_count',\n",
@@ -890,9 +889,11 @@
     "    x = datetime.datetime.strptime(x, \"%Y-%m-%d\").date()\n",
     "    return x\n",
     "\n",
-    "# Function for filling missing values with mean \n",
+    "# Function for filling missing values with mean. \n",
+    "# We are going to use mean for imputing missing numeric values because it will preserve distribution inside of \n",
+    "# the numeric predictors and will help us to keep other useful predictors.  \n",
     "def fill_mean(x):\n",
-    "    '''Function for filling missing values with mean'''\n",
+    "    '''function for filling missing values with mean'''\n",
     "    x  = x.fillna(x.mean())\n",
     "    return x\n",
     "    \n",
@@ -918,8 +919,11 @@
    "source": [
     "# Defining fucntions for cleaning categorical values\n",
     "\n",
-    "# Here we will replace missing categorical variables with the most frequent value - mode \n",
+    "# Here we will replace missing categorical variables with the most frequent value - mode.\n",
+    "# Unlike for numeric values, we can't really calculate mean for categorical values, hence using mode value is probably \n",
+    "# the best approach especially if we apply for a smaller % of the predicting variable. \n",
     "def impute_nan_most_frequent_category(DataFrame,ColName):\n",
+    "    '''function for finding replacing  categorical variables with mode'''\n",
     "    # .mode()[0] - gives first category name\n",
     "     most_frequent_category=DataFrame[ColName].mode()[0]\n",
     "    \n",
@@ -990,7 +994,7 @@
     "    for i in financials:\n",
     "        full_df[i] = full_df[i].fillna('$0').apply(financial_to_float)\n",
     "        \n",
-    "    # Imputing low 10% of missing numerics with mode values\n",
+    "    # Imputing low 10% of missing numerics with mean values\n",
     "    for i in numerics:\n",
     "        full_df[i] = full_df[i].apply(fill_mean, axis = 0)\n",
     "    \n",
@@ -1074,6 +1078,7 @@
    "outputs": [],
    "source": [
     "# At this step we will normalise and standartise our data by doing it within single pipeline\n",
+    "# this step should increase quality of our model \n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
@@ -1163,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1177,7 @@
        "'The r-squared score for your model was 0.5926181831561046 on 280363 values.'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,7 +1249,7 @@
     "\n",
     "forest_reg = RandomForestRegressor()\n",
     "\n",
-    "# We also specify number of cross validations\n",
+    "# We also specify number of cross-validations\n",
     "\n",
     "grid_search = GridSearchCV(forest_reg, param_grid, cv = 5,\n",
     "                           scoring = 'neg_mean_squared_error',\n",
@@ -1285,7 +1290,7 @@
    ],
    "source": [
     "# If we continue to search with higher number of cross-validation (cv), the score may improve.\n",
-    "# We can also get the best estimator directly \n",
+    "# We can also get the best estimator directly  by accessing\n",
     "\n",
     "grid_search.best_estimator_\n",
     "\n",
@@ -1317,7 +1322,7 @@
     }
    ],
    "source": [
-    "# Predict and score the model\n",
+    "# After finding the best Random Forest model, let's use to predict y_test and score the model\n",
     "\n",
     "y_test_preds = grid_search.predict(X_test)\n",
     "\n",
@@ -1365,15 +1370,10 @@
    "source": [
     "# Let's analyse importance of predicting attributes\n",
     "\n",
-    "headers = [\"feature\", \"score\"]\n",
-    "\n",
     "feature_importances = grid_search.best_estimator_.feature_importances_\n",
-    "\n",
     "attributes = X_train.columns\n",
-    "\n",
     "values = sorted(zip(attributes, feature_importances), reverse = True)\n",
-    "\n",
-    "rdm_forest_feature_importance = pd.DataFrame(values, columns = headers).sort_values(by=['score'], ascending=False)"
+    "rdm_forest_feature_importance = pd.DataFrame(values, columns = [\"feature\", \"score\"]).sort_values(by=['score'], ascending=False)"
    ]
   },
   {
@@ -1395,7 +1395,7 @@
     }
    ],
    "source": [
-    "# plot feature importances for top 15 features\n",
+    "# plot feature importances for the top 20 features\n",
     "\n",
     "features = rdm_forest_feature_importance['feature'][:20]\n",
     "scores = rdm_forest_feature_importance['score'][:20]\n",
@@ -1424,15 +1424,8 @@
    "source": [
     "On completion of Seattle AirBnB booking analysis we could clearly find the busiest time of the year in January, July and August. With the most expensive neighbourhoods being Magnolia, Queen Anne and Downtown.\n",
     "\n",
-    "We could also predict the price of a property based on its features. In particular, we’ve found that Random Forest is probably one of the best kinds of model to predict continuous price metrics based on numerical and one-hot encoded categorical features. The strongest indicators of booking prices are cleaning fee, number of bathrooms and beds followed by minimum number of nights, room type and number of reviews. It should be mentioned that although individual neighbourhood features (one-hot encoded) scored relatively low individually, they are likely to be quite an important feature if combined.\n"
+    "We could also predict the price of a property based on its features. In particular, we’ve found that Random Forest is probably one of the best kinds of model to predict continuous price metrics based on numerical and one-hot encoded categorical features. The strongest indicators of booking prices are cleaning fee, number of bathrooms and beds followed by minimum number of nights, room type and number of reviews. It should be mentioned that although an individual neighbourhood features (one-hot encoded) scored relatively low individually, they are likely to be quite an important feature if combined.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
