--- a/Seattle AirBnB Bookings Analysis .ipynb
+++ b/Seattle AirBnB Bookings Analysis .ipynb
@@ -1100,7 +1100,7 @@
     "\n",
     "clean_listings_tr = num_pipeline.fit_transform(clean_listings_df)\n",
     "\n",
-    "# Building new df with tranformed data\n",
+    "# Building new df with transformed data\n",
     "\n",
     "clean_listings_tr = pd.DataFrame(clean_listings_tr, columns = clean_listings_df.columns,\n",
     "                                  index = clean_listings_df.index) "
